# Delta-Robot-ROS2

./: .gitattributes  .gitignore  CLAUDE.md  DELTA_ROBOT_ARCHITECTURE.md  LICENSE  README.md  example_trajectories.txt
firmware/: Control_Delta.ino
install/: local_setup.sh  setup.sh
install/delta_robot_description/share/delta_robot_description/: package.ps1  package.sh
install/delta_robot_description/share/delta_robot_description/launch/: Arduino.launch  ArduinoTraj.launch
install/delta_robot_serial/lib/delta_robot_serial/: delta_joint_pub  ikin_server  pseudo_arduino  trajPlan_action_server
install/delta_robot_serial/share/delta_robot_serial/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/delta_robot_serial/share/delta_robot_serial/cmake/: ament_cmake_export_include_directories-extras.cmake  delta_robot_serial__rosidl_typesupport_cExport.cmake  delta_robot_serial__rosidl_typesupport_cppExport-noconfig.cmake  delta_robot_serial__rosidl_typesupport_cppExport.cmake  delta_robot_serial__rosidl_typesupport_introspection_cppExport-noconfig.cmake  delta_robot_serial__rosidl_typesupport_introspection_cppExport.cmake  export_delta_robot_serial__rosidl_generator_cExport.cmake  export_delta_robot_serial__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_delta_robot_serial__rosidl_typesupport_fastrtps_cExport.cmake  (+3 more)
install/serial/share/serial/: local_setup.sh  package.ps1  package.sh
log/: latest_build
src/delta_robot_description/: CMakeLists.txt  package.xml
src/delta_robot_description/config/: Delta_robot.rviz
src/delta_robot_description/launch/: ArduinoTraj.launch  JointStatePublisher.launch  PseudoArduino.launch  PseudoArduinoTraj.launch
src/delta_robot_serial/: CMakeLists.txt  package.xml
src/delta_robot_serial/action/: PosTraj.action
src/delta_robot_serial/include/: direct_kinematics.h  inverse_kinematics.h  spline_trajectory.h
src/delta_robot_serial/src/: delta_joint_pub.cpp  ikin_server.cpp  pseudo_arduino.cpp  trajPlan_actionServer.cpp
src/delta_robot_serial/src/install/: local_setup.sh  setup.sh
src/delta_robot_serial/src/install/delta_robot_serial/share/delta_robot_serial/: package.bash  package.zsh
src/delta_robot_serial/src/log/: latest_build
(+24 files in other folders)
